_compass/screen.scss
@import "compass/reset";
@import "compass/utilities/general/clearfix";

@import 'layout';
@import 'syntax';

body {
	font-family: 'Roboto';
	font-size: 17px;
	line-height: 1.3em;
}

body > header {
	background-color: #4391C8;
	color: #fff;

	a {
		color: #fff;
	}
}

body > footer {
	border-top: 1px solid #d8d8d8;
}

body > header h1 {
	font-weight: normal;
	font-size: 64px;
	line-height: 1em;
	text-transform: lowercase;
	margin: 0;
}
body > header p {
	margin: 12px 0;
}
body > header h1 span {
	font-weight: 100;
}

section h1 {
	font-family: 'Roboto Slab';
	font-size: 32px;
	font-weight: normal;
}
section section h1 {
	font-family: 'Roboto';
	font-size: 22px;
	border-left: none;
	padding: 0;
	margin-bottom: 16px;
}

li.sample {
margin-bottom: 16px;
}
li.sample h1 {
	font-family: 'Roboto';
	font-size: 17px;
	border-bottom: none;
	margin: 0;
}
li.sample p {
	margin: 4px 0;
	color: #777;
	font-size: 14px;
}

ul {
	list-style-type: none;
	padding: 0;
}

a {
	color: #3A6A8C;
	text-decoration: none;
}

code {
	font-family: 'Ubuntu Mono';
}

pre {
	tab-size: 2;
}

.codeblock {
	display: block;
	background-color: #2c2c2c;
	color: #fff;
	line-height: 1.1em;
	overflow-x: auto;

	.linenums {
		position: absolute;
		padding: 16px 8px 16px 24px;
		text-align: right;
		color: #6b6b6b;
		background-color: #2c2c2c;
		border-right: 1px solid #3f3f3f;
	}
	.code {
		width: 100%;
		padding: 16px 24px 16px 64px;

		.codeline {
			display: inline-block;
			width: 100%;
		}
	}
}

.lineref {
	border-bottom: 1px dotted #000;
}

p {
	margin-bottom: 1em;
}

em, i {
	font-style: italic;
}

strong, b {
	font-weight: bold;
}

.sample-info {
	h1 {
		display: none;
	}

	h2 {
		margin-bottom: 6px;
		text-transform: uppercase;
		font-size: 12px;
		color: #666;
	}

	.contributors {
		margin-bottom: 14px;
	
		li {
			display: inline-block;
	
			a img {
				border-radius: 50%;
				width: 36px;
				height: 36px;
			}
		}
	}
}

.about {
	img {
		float: left;
		margin-right: 16px;
		width: 70px;
	}

	p {
		margin-top: 16px;
		text-transform: uppercase;
		font-size: 12px;
		color: #666;

		a {
			display: block;
			font-size: 17px;
			text-transform: none;
		}
	}
}

